# DroidVM

./: .gitattributes  .gitignore  .gitmodules  README.md  README.zh.md  build.sh  settings.gradle.kts
.github/workflows/: build.yml  checks.yml  dev-release.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hash.json
app/src/main/assets/data/: gunyah.yaml  languages.yaml  license.yaml  repo.yaml
app/src/main/assets/privacy/: en-US.txt  metadata.json  zh-CN.txt
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/compat/: a13.S  a13.cpp  a14.S  a14.cpp  a15.S  a15.cpp  a16.S  a16.cpp
app/src/main/cpp/console/: command.cpp  command.h  ipc_proto.cpp  ipc_proto.h  main.cpp
app/src/main/cpp/console/commands/: console.cpp  console_history.cpp  help.cpp  list.cpp  ping.cpp  powerbtn.cpp  resume.cpp  sleepbtn.cpp  start.cpp  status.cpp  stop.cpp  stop_all.cpp  suspend.cpp  version.cpp
app/src/main/cpp/simpledump/: audit_arch.c  disasm.c  main.c  map.c  registers.c  signals.c  simpledump.h
app/src/main/cpp/unixhelper/: daemon.c  native_process.c  unixhelper.c
app/src/main/cpp/vnc/: vncclient_jni.c
app/src/main/res/anim/: slide_out_left.xml  slide_out_right.xml
app/src/main/res/drawable/: ic_add.xml  ic_addon_remove.xml  ic_android.xml  ic_application_cog.xml  ic_arrow_forward.xml  ic_ballon.xml  ic_book.xml  ic_bug.xml  ic_card_multiple.xml  ic_cdrom.xml  ic_cellphone_cog.xml  ic_check.xml  ic_circle_filled.xml  ic_circle_outline.xml  ic_clock.xml  ic_close.xml  ic_compress.xml  ic_connection.xml  ic_counter.xml  ic_cpu.xml  ic_daemon_checking.xml  ic_daemon_running.xml  ic_daemon_stopped.xml  ic_delete.xml  ic_disk_format.xml  ic_download.xml  ic_download_box.xml  ic_drawing.xml  ic_edit.xml  ic_eraser.xml  ic_ethernet.xml  ic_expand_less.xml  ic_expand_more.xml  ic_export_to.xml  ic_file.xml  ic_file_multiple.xml  ic_file_swap.xml  ic_file_tree.xml  ic_floppy.xml  ic_folder.xml  (+67 more)
app/src/main/res/layout/: activity_agent_operation.xml  activity_change_password.xml  activity_disk_create.xml  activity_disk_info.xml  activity_disk_operation.xml  activity_hugepage.xml  activity_hugepage_process.xml  activity_import_images.xml  activity_import_lxc_images.xml  activity_import_url.xml  activity_logs.xml  activity_main.xml  activity_network_edit.xml  activity_network_info.xml  activity_setup.xml  activity_splash.xml  activity_vm_console.xml  activity_vm_edit.xml  activity_vm_info.xml  activity_vm_native_display.xml  activity_vm_vnc_display.xml  activity_vm_vnc_presentation.xml  activity_vmpkg_export.xml  dialog_boot_menu.xml  dialog_disk_clone.xml  dialog_disk_resize.xml  dialog_disk_set_format.xml  dialog_image_picker.xml  dialog_kernel_modules.xml  dialog_license_detail.xml  dialog_logs.xml  dialog_snapshot_create.xml  dialog_vnc_url.xml  (+54 more)
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/ci/: ascii_allow.txt  check_ascii.py  check_translations.py
(+413 files in other folders)
